Removing whitespace from Add New Template| Template scroll issue| Select Type Change for wait and Yes No

--- a/src/app/campaigns/automation/amendAutomation/amendAutomation.scss
+++ b/src/app/campaigns/automation/amendAutomation/amendAutomation.scss
@@ -223,6 +223,12 @@
         min-width: 315px;
         margin-right: 22px;
       }
+
+      .ant-picker-clear {
+        .anticon svg {
+          margin-bottom: 2px;
+        }
+      }
     }
 
     .radioForm {
