--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -184,6 +184,10 @@
   padding: 0;
   margin: 0;
   max-width: 100vw;
+
+  .ant-modal {
+    padding: 0;
+  }
 }
 
 .site-layout .site-layout-background {
